--- a/notes-server/build.gradle
+++ b/notes-server/build.gradle
@@ -23,9 +23,9 @@ repositories {
 
 
 dependencies {
+	runtime 'org.postgresql:postgresql:9.4-1201-jdbc4'
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-data-rest')
-	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.springframework.security:spring-security-test')
